--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -25,6 +25,14 @@
   margin-bottom: 10px;
 }
 
+.textDiv {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
+}
+
 .image {
   border-radius: 5%;
 }
